<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="app_logo">App Logo</string>
    <string name="loginScreenAppName">Expense Tracker</string>
    <string name="emailAddressTextInputEditTextHint">Email</string>
    <string name="passwordTextInputEditTextHint">Password</string>
    <string name="signInButtonText">SIGN IN USING EMAIL</string>
    <string name="forgotPasswordButtonText">Forgot Password?</string>
    <string name="orText">OR</string>
    <string name="signUpUsingEmailButtonText">SIGN UP USING EMAIL</string>
    <string name="signInUsingGoogle">SIGN IN USING GOOGLE</string>
    <string name="emailAddressInformation">Please, provide email address to reset the password</string>
    <string name="email">Email</string>
    <string name="send_confirmation">SEND CONFIRMATION TO EMAIL</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="emailAddress">Email Address</string>
    <string name="secured_field">Secured Field</string>
    <string name="user">User</string>
    <string name="please_wait">Please, wait</string>
    <string name="authenticating">Authenticating</string>
    <string name="welcome_to_expense_tracker">Welcome To Expense Tracker!</string>
    <string name="you_just_took_the_first_step_towards">You just took the first step towards managing your money. Let\'s get started.</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="help">Help</string>
    <string name="chart">Chart</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="sign_out">Sign Out</string>
    <string name="budgets">Budgets</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="goals">Goals</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="start_with_to_create_first_one">Start with (+) to create first one.</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="icon">Icon</string>
    <string name="create_periodic_budgets">Create Periodic Budgets</string>
    <string name="create_one_time_budgets">Create One-Time Budgets</string>
    <string name="budget_info_1">Keep your business on track and</string>
    <string name="budget_info_2">under control with budgets.</string>
    <string name="category">Category</string>
    <string name="expense_category">EXPENSE</string>
    <string name="income_category">INCOME</string>
    <string name="add_item">ADD ITEM</string>
    <string name="subcategory">SUBCATEGORY</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="today">Today</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="backspace">Backspace</string>
    <string name="done">Done</string>
    <string name="equal">=</string>
    <string name="no_transactions_made_yet">No transactions made yet.</string>
    <string name="calendar_cap">CALENDAR</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="am_i_spending_more_than_i_make">Am I spending more than I make?</string>
    <string name="rupees">\u20B9</string>
    <string name="spending_by_categories">Spending by Categories</string>
    <string name="where_does_my_money_go">Where does my money go?</string>
    <string name="sign_up_using_email">SIGN UP USING EMAIL</string>
    <string name="signing_in">Signing In</string>
    <string name="forgotPasswordTitle">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="information">Please, provide email address to reset the password.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="balance_by_accounts">Balance by Accounts</string>
    <string name="how_much_money_do_i_save_every_month">How much money do I save every month?</string>
    <string name="cash">Cash</string>
    <string name="balance_by_currencies">Balance by Currencies</string>
    <string name="how_much_do_i_have_in_currencies">How much do I have in currencies?</string>
    <string name="inr">INR</string>
    <string name="expenses_structure">Expenses Structure</string>
    <string name="how_much_am_i_spending">How much am I spending?</string>
    <string name="how_much_am_i_earning">How much am I earning?</string>
    <string name="balance_percentage_in_each_month_of_a_year">Balance percentage in each month of a year.</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_a_new_account">Create a new account!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="top_5_expenses">TOP 5 EXPENSES</string>
    <string name="show_more">Show more</string>
    <string name="the_nature_of_spending">The Nature of Spending</string>
    <string name="top_categories">TOP CATEGORIES</string>
    <string name="how_am_i_spending">How am I spending?</string>
    <string name="earning_by_categories">Earning by Categories</string>
    <string name="where_does_money_come_from">Where does money come from?</string>
    <string name="top_5_income">TOP 5 INCOME</string>
    <string name="the_nature_of_earning">The Nature of Earning</string>
    <string name="how_am_i_earning">How am I earning?</string>
    <string name="records">Records</string>
    <string name="choose_category">CHOOSE CATEGORY</string>
    <string name="confirm">CONFIRM</string>
    <string name="general">General</string>
    <string name="money">Money</string>
    <string name="date">Date</string>
    <string name="memo">Memo</string>
    <string name="edit">Edit</string>
    <string name="on_boarding_screen_image">On-boarding screen image</string>
    <string name="edit_memo">Edit Memo</string>
    <string name="user_profile_settings">User profile settings</string>
    <string name="user_profile_settings_summary">You can change your name or password, logout or delete you data.</string>
    <string name="set_pin">Set PIN</string>
    <string name="set_pin_summary">Set a PIN to protect your records.</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="use_fingerprint_summary">Set up fingerprint to protect your records.</string>
    <string name="about">About</string>
    <string name="about_summary">Find out more about us.</string>
    <string name="expense_report">Expense Report</string>
    <string name="cash_flow_table">Cash Flow Table</string>
    <string name="do_i_need_any_chart">Do I need any chart?</string>
    <string name="quick_overview">Quick overview</string>
    <string name="count">Count</string>
    <string name="average_day">Average (Day)</string>
    <string name="average_records">Average (Records)</string>
    <string name="total">Total</string>
    <string name="new_budget">New Budget</string>
    <string name="period">Period</string>
    <string name="amount">Amount</string>
    <string name="categories">Categories</string>
    <string name="accounts">Accounts</string>
    <string name="all">All</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
</resources>
